fixed login button sometimes not being able to be clicked on mobile

--- a/app/static/styles/components/buttons.css
+++ b/app/static/styles/components/buttons.css
@@ -75,15 +75,18 @@
 
 /* Specific button styles */
 .login-button {
-    padding: 30px 60px;
-    font-size: 60px;
+    padding: 20px 30px;
+    font-size: 18px;
     background-color: #1DB954;
     color: white;
     border-radius: 120px;
+    text-decoration: none;
+
 }
 
 .login-button:hover {
     background-color: #1ED760;
+    text-decoration: none;
 }
 
 .copy-link-button {
@@ -129,6 +132,6 @@
 @media (max-width: 480px) {
     .login-button {
         padding: 15px 30px;
-        font-size: 30px;
+        font-size: 20px;
     }
 }
